# SG4-Gpp

./: CMakeLists.txt  GNUmakefile  Macro.mac  MudarPressao.mac  README.md  Simu-v2.1.tar.xz  Simu-v2.2.tar.xz  ar_90_ch4_10_1atm.gas  gamma.mac  main.cc  mdt_elx_delta.txt  physics.mac  run.mac  teste.mac  teste2.mac  vis.mac
Análise/: 2Fit  AvaPEle.txt  AvaPTemp.txt  AvaTot.txt  Eli  Eli.cpp  Fiit.cpp  Histo1D  Histo1D.cpp  Histo2D  Histo2D.cpp  Histograma  comp.sh  gp.cpp  hist1d  tree.cpp
Gerador/: Gerador  Gerador.cpp  Macro.mac  comp.sh
include/: Analise.hh  CampoEletrico.hh  Constantes.hh  Detector.hh  DetectorMens.hh  DetectorSensivel.hh  EventoAcao.hh  GarfieldDetector.hh  GarfieldListaFisica.hh  GarfieldModelo.hh  GeradorPrimarias.hh  InicializadorAcao.hh  ListaFisica.hh  RunAcao.hh  StepAcao.hh  TrackAcao.hh  colors.hh
source/: CampoEletrico.cc  Detector.cc  DetectorMens.cc  DetectorSensivel.cc  EventoAcao.cc  GarfieldDetector.cc  GarfieldListaFisica.cc  GarfieldModelo.cc  GeradorPrimarias.cc  InicializadorAcao.cc  ListaFisica.cc  RunAcao.cc  StepAcao.cc  TrackAcao.cc
